# rust-file-metadata

./: Cargo.toml  README.md
file-metadata/: Cargo.toml
file-metadata-mditem-macros/: Cargo.toml
file-metadata-mditem-macros/src/: lib.rs
file-metadata/src/: lib.rs  mdquery.rs
file-metadata/src/mditem/: mod.rs
file-metadata/src/mditem/attributes/: audio.rs  common.rs  fs.rs  image.rs  mod.rs  video.rs
src/: lib.rs  mdquery.rs
src/mditem/: mod.rs
