[package]
name = "file-metadata"
version = "0.0.1"
description = "An incomplete wrap around File Metadata of Core Services framework (macOS)."
homepage = "https://github.com/shurizzle/rust-file-metadata"
repository = "https://github.com/shurizzle/rust-file-metadata"
license-file = "../LICENSE"
authors = ["Domenico Shura <shura1991@gmail.com>"]
edition = "2018"

[dependencies.file-metadata-mditem-macros]
path = "../file-metadata-mditem-macros"
version = "0.0.1"

[dependencies]
libc = "0.2.58"
core-foundation-sys = "0.6.2"
core-foundation = "0.6.4"
bitflags = "1.1.0"
